--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ margin-left:-5px;
 Department of Computer and Information Science<br>
 Corley-247<br>
 E-mail: rghosh@atu.edu<br>
-Phone no : 4799643252
+Phone no : 479-964-3252
 </p>
 <ul  class="links" style="list-style:none;">
 
