--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@ Phone no : 479-964-3252
 		</ol>
 		<h6 style="color:black; margin-top:15px;font-weight:bold;">Grants: </h6>
 		<ul>
-		<li>Project Manager: U.S. Department of Education Project Proposal Submission (# P120A150078): $530k</li>
-		<li> Awarded ATU Innovation Grant 2021-2022 as a Project PI $110,000 for two years.</li>
+		<li>Project Manager: U.S. Department of Education Project(# P120A150078): $530k</li>
+		<li> Awarded ATU Innovation Grant 2022-2023 as a Project PI $110,000 for two years.</li>
+		<li> Undergraduate Research Scholaship Awards 2022-2023 : $2000 .</li>
 		</ul>
 	</div>
 	
