--- a/publications/index.html
+++ b/publications/index.html
@@ -120,22 +120,22 @@ Phone no : 4799643252
 	<h3 style="color:#0b3a35;" >Publications</h3>
 	<div style="margin-left:20px;margin-top:50px;">
 	<h6 ><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ" target="blank" style="color:black;">Informally Teaching Black Youth STEM Concepts Virtually Using Artificial Intelligence and Machine Learning</a></h6>
-	<p>Springer, Cham  July 1, 2021</p>
+	<p>Springer, Cham  July 01, 2021</p>
 	</div><hr style="color:#555;">
 	<div style="margin-left:20px;margin-top:20px;">
 	<h6><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ" target="blank" style="color:black;">
 Preliminary Screening of COVID-19 Infection Employing Machine Learning Techniques From Simple Blood Profile</a></h6>
-	<p>International Journal of Quantitative Structure-Property Relationships (IJQSPR) · Jul 1, 2021</p>
+	<p>International Journal of Quantitative Structure-Property Relationships (IJQSPR) · July 01, 2021</p>
 	</div><hr style="color:#555;">
 	<div style="margin-left:20px;margin-top:20px;">
 	<h6 ><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ"  target="blank" style="color:black;">
 Application of Artificial Intelligence and Machine Learning Techniques in Classifying Extent of Dementia Across Alzheimer's Image Data</a></h6>
-	<p>International Journal of Quantitative Structure-Property Relationships (IJQSPR)6(2) · Mar 16, 2021</p>
+	<p>International Journal of Quantitative Structure-Property Relationships (IJQSPR)6(2) · March 16, 2021</p>
 	</div><hr style="color:#555;">
 	<div style="margin-left:20px;margin-top:20px;">
 	<h6><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ" target="blank" style="color:black;">
-APPLYING BIOMEDICAL INFORMATICS TO ESTABLISH THE RELATIONSHIP BETWEEN OBESITY AND LIVER ISCHEMIA/REPERFUSION INJURY</a></h6>
-	<p>3rd Annual McNair Scholars Virtual Research Conference · Nov 16, 2020</p>
+Classification of parkinson's Disease Using Motor and Non-Motor Biomarkers Through Machine Learning Techniques</a></h6>
+	<p>International Journal of Quantitative Structure-Property Relationships · April 01, 2022</p>
 	</div><hr style="color:#555;">
 	<div style="margin-left:20px;margin-top:20px;">
 	<h6><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ" target="blank" style="color:black;">Hybrid Knowledge Mining Ecosystem</a></h6>
