--- a/publications/index.html
+++ b/publications/index.html
@@ -147,7 +147,7 @@ Classification of parkinson's Disease Using Motor and Non-Motor Biomarkers Throu
 	</div><hr style="color:#555;">
 	<div style="margin-left:20px;margin-top:20px;">
 	<h6 ><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ" target="blank" style="color:black;">Toxicity Classification on Music Lyrics Using Machine Learning Algorithms</a></h6>
-	<p>Published: 2021/12/18</p>
+	<p>Published: 18 Decemeber 2021</p>
 	</div><hr style="color:#555;">
 	
 	
