--- a/publications/index.html
+++ b/publications/index.html
@@ -119,34 +119,34 @@ Phone no : 4799643252
 		<div style="margin-top:20px;">	
 	<h3 style="color:#0b3a35;" >Publications</h3>
 	<div style="margin-left:20px;margin-top:50px;">
-	<h6 ><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ" target="blank" style="color:black;">Informally Teaching Black Youth STEM Concepts Virtually Using Artificial Intelligence and Machine Learning</a></h6>
+	<h6 ><a href="https://link.springer.com/chapter/10.1007/978-3-030-80129-8_32" target="blank" style="color:black;">Informally Teaching Black Youth STEM Concepts Virtually Using Artificial Intelligence and Machine Learning</a></h6>
 	<p>Springer, Cham  July 01, 2021</p>
 	</div><hr style="color:#555;">
 	<div style="margin-left:20px;margin-top:20px;">
-	<h6><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ" target="blank" style="color:black;">
+	<h6><a href="https://www.igi-global.com/article/preliminary-screening-of-covid-19-infection-employing-machine-learning-techniques-from-simple-blood-profile/282501" target="blank" style="color:black;">
 Preliminary Screening of COVID-19 Infection Employing Machine Learning Techniques From Simple Blood Profile</a></h6>
 	<p>International Journal of Quantitative Structure-Property Relationships (IJQSPR) · July 01, 2021</p>
 	</div><hr style="color:#555;">
 	<div style="margin-left:20px;margin-top:20px;">
-	<h6 ><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ"  target="blank" style="color:black;">
+	<h6 ><a href="https://www.igi-global.com/article/application-of-artificial-intelligence-and-machine-learning-techniques-in-classifying-extent-of-dementia-across-alzheimers-image-data/274928"  target="blank" style="color:black;">
 Application of Artificial Intelligence and Machine Learning Techniques in Classifying Extent of Dementia Across Alzheimer's Image Data</a></h6>
 	<p>International Journal of Quantitative Structure-Property Relationships (IJQSPR)6(2) · March 16, 2021</p>
 	</div><hr style="color:#555;">
 	<div style="margin-left:20px;margin-top:20px;">
-	<h6><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ" target="blank" style="color:black;">
+	<h6><a href="https://www.igi-global.com/article/classification-of-parkinsons-disease-using-motor-and-non-motor-biomarkers-through-machine-learning-techniques/290011" target="blank" style="color:black;">
 Classification of parkinson's Disease Using Motor and Non-Motor Biomarkers Through Machine Learning Techniques</a></h6>
 	<p>International Journal of Quantitative Structure-Property Relationships · April 01, 2022</p>
 	</div><hr style="color:#555;">
 	<div style="margin-left:20px;margin-top:20px;">
-	<h6><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ" target="blank" style="color:black;">Hybrid Knowledge Mining Ecosystem</a></h6>
+	<h6><a href="https://dl.acm.org/doi/abs/10.1145/3167020.3167024" target="blank" style="color:black;">Hybrid Knowledge Mining Ecosystem</a></h6>
 	<p>ACM MEDES 2017 · Oct 17, 2017</p>
 	</div><hr style="color:#555;">
 	<div style="margin-left:20px;margin-top:20px;">
-	<h6><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ" target="blank" style="color:black;">Assessing the Economic Impacts of COVID-19 on the Aquaculture and Fisheries Sectors in Relation to Food Security: A Critical Review</a></h6>
+	<h6><a href="https://www.mdpi.com/2071-1050/14/14/8766" target="blank" style="color:black;">Assessing the Economic Impacts of COVID-19 on the Aquaculture and Fisheries Sectors in Relation to Food Security: A Critical Review</a></h6>
 	<p>Published: 18 July 2022</p>
 	</div><hr style="color:#555;">
 	<div style="margin-left:20px;margin-top:20px;">
-	<h6 ><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=rOKEO14AAAAJ" target="blank" style="color:black;">Toxicity Classification on Music Lyrics Using Machine Learning Algorithms</a></h6>
+	<h6 ><a href="https://ieeexplore.ieee.org/abstract/document/9689865" target="blank" style="color:black;">Toxicity Classification on Music Lyrics Using Machine Learning Algorithms</a></h6>
 	<p>Published: 18 Decemeber 2021</p>
 	</div><hr style="color:#555;">
 	
