--- a/students/index.html
+++ b/students/index.html
@@ -172,7 +172,7 @@ Phone no : 4799643252
 				
 			
 			<div class ="col-md-3">
-			<img src="../1617597757987.jpg" width="100%" >
+			<img src="../" width="100%" >
 				<div  class="text">
 				<h4>Zurab Sabakhtarishvili</h4>
 				<p style="font-size:18px;">Undergraduate Student</p>
