--- a/students/index.html
+++ b/students/index.html
@@ -169,6 +169,30 @@ Phone no : 4799643252
 				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/in/zurab-sabakhtarishvili-33b2731b4/" target="blank" >LinkedIN</a></p>
 				</div>
 			</div>
+			<div class ="col-md-3">
+				<img src="../6d37e810-cfe9-4765-8ece-9d095ec0c534.jpg" width="100%">
+				<div  class="text">
+				<h4>Navadheep Chowdhary</h4>
+				<p style="font-size:18px;">Graduate student</p>
+				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/mwlite/in/navadheep-chowdhary-a18890231" target="blank">LinkedIN</a></p>
+				</div>
+			</div>
+			<div class="col-md-3">
+			<img src="../1589963950107.jpg" width="100%">
+				<div  class="text">
+				<h4>Sathvik Prasad</h4>
+				<p style="font-size:18px;">Graduate student</p>
+				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/in/sathvik-prasad/" target="blank">LinkedIN</a></p>
+				</div>
+			</div>
+			<div class ="col-md-3">
+			<img src="../1642524711061.jpg" width="100%" >
+				<div  class="text">
+				<h4>Sucharitha Reddy</h4>
+				<p style="font-size:18px;">Graduate student</p>
+				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/in/sucharitha-reddy-605096127/" target="blank" >LinkedIN</a></p>
+				</div>
+			</div>
 				
 	</div>
 	
