--- a/students/index.html
+++ b/students/index.html
@@ -172,9 +172,9 @@ Phone no : 4799643252
 			<div class ="col-md-3">
 				<img src="../6d37e810-cfe9-4765-8ece-9d095ec0c534.jpg" width="100%">
 				<div  class="text">
-				<h4>Navadheep Chowdhary</h4>
-				<p style="font-size:18px;">Graduate student</p>
-				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/mwlite/in/navadheep-chowdhary-a18890231" target="blank">LinkedIN</a></p>
+				<h4>Sijan Panday</h4>
+				<p style="font-size:18px;">Undergraduate student</p>
+				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/in/sijan-panday-538b7a209/" target="blank">LinkedIN</a></p>
 				</div>
 			</div>
 			<div class="col-md-3">
@@ -182,7 +182,7 @@ Phone no : 4799643252
 				<div  class="text">
 				<h4>Sathvik Prasad</h4>
 				<p style="font-size:18px;">Graduate student</p>
-				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/in/sathvik-prasad/" target="blank">LinkedIN</a></p>
+				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/in/clayton-jensen-875556219/" target="blank">LinkedIN</a></p>
 				</div>
 			</div>
 			<div class ="col-md-3">
@@ -190,7 +190,7 @@ Phone no : 4799643252
 				<div  class="text">
 				<h4>Sucharitha Reddy</h4>
 				<p style="font-size:18px;">Graduate student</p>
-				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/in/sucharitha-reddy-605096127/" target="blank" >LinkedIN</a></p>
+				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/in/hiromi-honda-35389a23a/" target="blank" >LinkedIN</a></p>
 				</div>
 			</div>
 				
