--- a/students/index.html
+++ b/students/index.html
@@ -170,7 +170,7 @@ Phone no : 4799643252
 				</div>
 			</div>
 			<div class ="col-md-3">
-				<img src="../6d37e810-cfe9-4765-8ece-9d095ec0c534.jpg" width="100%">
+				<img src="../1681071493840.jpg" width="100%">
 				<div  class="text">
 				<h4>Sijan Panday</h4>
 				<p style="font-size:18px;">Undergraduate student</p>
@@ -178,18 +178,18 @@ Phone no : 4799643252
 				</div>
 			</div>
 			<div class="col-md-3">
-			<img src="../1589963950107.jpg" width="100%">
+			<img src="../1684184528249.jpg" width="100%">
 				<div  class="text">
 				<h4>Sathvik Prasad</h4>
-				<p style="font-size:18px;">Graduate student</p>
+				<p style="font-size:18px;">Undergraduate  student</p>
 				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/in/clayton-jensen-875556219/" target="blank">LinkedIN</a></p>
 				</div>
 			</div>
 			<div class ="col-md-3">
-			<img src="../1642524711061.jpg" width="100%" >
+			<img src="../1683567151260.jpg" width="100%" >
 				<div  class="text">
 				<h4>Sucharitha Reddy</h4>
-				<p style="font-size:18px;">Graduate student</p>
+				<p style="font-size:18px;">Undergraduate student</p>
 				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/in/hiromi-honda-35389a23a/" target="blank" >LinkedIN</a></p>
 				</div>
 			</div>
