--- a/students/index.html
+++ b/students/index.html
@@ -170,7 +170,7 @@ Phone no : 4799643252
 				</div>
 			</div>
 			<div class ="col-md-3">
-				<img src="../1681071493840.jpg" width="100%">
+				<img src="../1681071493840.jpeg" width="100%">
 				<div  class="text">
 				<h4>Sijan Panday</h4>
 				<p style="font-size:18px;">Undergraduate student</p>
@@ -178,7 +178,7 @@ Phone no : 4799643252
 				</div>
 			</div>
 			<div class="col-md-3">
-			<img src="../1684184528249.jpg" width="100%">
+			<img src="../1684184528249.jpeg" width="100%">
 				<div  class="text">
 				<h4>Sathvik Prasad</h4>
 				<p style="font-size:18px;">Undergraduate  student</p>
@@ -186,7 +186,7 @@ Phone no : 4799643252
 				</div>
 			</div>
 			<div class ="col-md-3">
-			<img src="../1683567151260.jpg" width="100%" >
+			<img src="../1683567151260.jpeg" width="100%" >
 				<div  class="text">
 				<h4>Sucharitha Reddy</h4>
 				<p style="font-size:18px;">Undergraduate student</p>
