--- a/students/index.html
+++ b/students/index.html
@@ -157,6 +157,15 @@ Phone no : 4799643252
 				</div>
 			</div>
 			
+			<div class ="col-md-3">
+			<img src="../1640672965536.jpg" width="100%" >
+				<div  class="text">
+				<h4>Musfikur Rahaman</h4>
+				<p style="font-size:18px;">Graduate student</p>
+				<p style="font-size:18px;">Profile : <a href ="https://www.linkedin.com/in/musfikur-rahaman-76750b91/" target="blank" >LinkedIN</a></p>
+				</div>
+			</div>
+			
 			</div>
 			<h3 style="color:#0b3a35; margin-top:40px;"> Undergraduate Students</h3>
 			<hr>
