--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Phone no : 479-964-3252
 	<div class="main">
 	<div>
 		<h3 style="color:#0b3a35; margin-top:10px;"> Research</h3>
-		<p > I am a tenure track faculty within the Department of Computer & Information Science at Arkansas Tech University. My research focuses on the application of deep and machine learning techniques in different domains.</p>
+		<p > I am a tenure track faculty within the Department of Engineering and Computing Sciences at Arkansas Tech University. My research focuses on the application of Artificial Intelligence techniques in Health, Agriculture, Education and various domains. </p>
 		<b>Focus Areas:</b><p>Data Analysis, Visualization, and Predictive Modeling<br>Machine Learning Techniques(Decision Trees, Logistic Regression,Random Forest, KNN, Naïve Bayes, XGB boost, SVM)<br>Deep Learning Techniques (ANN, Markov Chain, CNN, RNN, LSTM)<br>Natural Language Processing (NLP)<br>Time Series Analysis (ARIMA & PROPHET)<br>Web Development, Web Scraping<br>Research, Reports, and Forecasts.</p>
 		<!--<img src="cover3.jpeg" width="100%">-->
 		<h6 style="color:black; margin-top:15px;font-weight:bold;">Publications & Abstract & Poster </h6>
