--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ margin-left:-5px;
 	<h3 class="heading"><b>DR. ROBIN GHOSH</b><br><Span style="font-size:15px;">ASSISTANT PROFESSOR </span></h3>
 	<p class="p1">
 Department of Computer and Information Science<br>
-Corley-247<br>
+Corley-238<br>
 E-mail: rghosh@atu.edu<br>
 Phone no : 479-964-3252
 </p>
@@ -122,24 +122,25 @@ Phone no : 479-964-3252
 	<div class="main">
 	<div>
 		<h3 style="color:#0b3a35; margin-top:10px;"> Research</h3>
-		<p > I am a tenure track faculty within the Department of Engineering and Computing Sciences at Arkansas Tech University. My research focuses on the application of Artificial Intelligence techniques in Health, Agriculture, Education and various domains. </p>
-		<b>Focus Areas:</b><p>Data Analysis, Visualization, and Predictive Modeling<br>Machine Learning Techniques(Decision Trees, Logistic Regression,Random Forest, KNN, Naïve Bayes, XGB boost, SVM)<br>Deep Learning Techniques (ANN, Markov Chain, CNN, RNN, LSTM)<br>Natural Language Processing (NLP)<br>Time Series Analysis (ARIMA & PROPHET)<br>Web Development, Web Scraping<br>Research, Reports, and Forecasts.</p>
+		<p > I am a tenure track faculty within the Department of Engineering and Computing Sciences at Arkansas Tech University. My research focuses on the application of Artificial Intelligence techniques in Health, Agriculture, Education, and various domains to explore innovative AI solutions. With over 9+ years of academic research experience, I have experienced in developing and implementing large-scale algorithms that have shaped research outcomes in Bioinformatics and other areas.  </p>
+		<b>Focus Areas:</b><p>Data Analysis, Visualization, and Predictive Modeling<br>Machine Learning Techniques(Decision Trees, Logistic Regression, Random Forest, KNN, Naïve Bayes, XGB boost, SVM)<br>Deep Learning Techniques (ANN, Markov Chain, CNN, RNN, LSTM)<br>Natural Language Processing (NLP)<br>Time Series Analysis (ARIMA & PROPHET)<br>Web Development, Web Scraping<br>Research, Reports, and Forecasts.</p>
 		<!--<img src="cover3.jpeg" width="100%">-->
 		<h6 style="color:black; margin-top:15px;font-weight:bold;">Publications & Abstract & Poster </h6>
 		<ol  style="line-height:30px;">
+		<li style="color:#212529;"> <strong> Robin Ghosh*,</strong> " Classifying extent of dementia Across Alzheimer’s Image Data & Iteration Time Prediction for CNN in Local Vs. Big Data Platform “Presented a poster at a virtual conference held on April 2022, UT Dallas, Texas USA. {Poster Presentation}.</li> 
 		<li style="color:#212529;"> <strong>Robin Ghosh*,</strong> Anirudh Reddy Cingreddy, Venkata Melapu, Sravanthi Joginipelli, Supratik Kar "Application of Artificial Intelligence and Machine Learning Techniques in Classifying Extent of Dementia Across Alzheimer's Image Data." IJQSPR 6.2 (2021): 29-46. Web. 30 Mar. 2021. doi:10.4018/IJQSPR.2021040103 </li>
 		<li style="color:#212529;">  Anirudh Reddy Cingreddy,<strong>  Robin Ghosh*,</strong> Supratik Kar, Venkata Melapu, Sravanthi Joginipelli, Jerzy Leszczynski " Preliminary Screening of COVID-19 Infection employing Machine Learning Techniques from Simple Blood Profile "  IJQSPR 6.3 (2021): 2021. </li>
 		<li style="color:#212529;">   Darron Lamkin,<strong> Robin Ghosh*,</strong> Tutaleni I Asino, Tor A kwembe "Informally Teaching Black Youth STEM Concepts Virtually using Artificial Intelligence and Machine Learning” “Science and Information conference ” 2021.  </li>
-		<li style="color:#212529;">  Anirudh Reddy Cingreddy,<strong> Robin Ghosh*,</strong> Venkata Melapu, Sravanthi Joginipelli, Tor A kwembe "Classification of parkinson's disease using motor and non-motor biomarkers through machine learning techniques "  IJQSPR 6.4 (2021): 2021.  </li>
-		<li style="color:#212529;">  Juganta K Roy,<strong> Robin Ghosh*,</strong> Ruma Das, Jerzy Leszczynski "Machine learning for the highperformance donor/acceptor pairs for non-fullerene based organic solar cells “ Conference of American Chemical Society Spring : 2021. {Oral Presentation}.  </li>
-		<li style="color:#212529;"> Sathvik Palyam *,<strong> Robin Ghosh*,</strong> " A web user interface image processing tool for classifying extent of dementia across Alzheimer’s “ Posters at the capital 2022 will be held in March 09, Little Rock Arkansas, USA. {Poster Presentation}.</li> 
-		<li style="color:#212529;">MAS Siddique. MI Sarker.<strong> Robin Ghosh*,</strong> Komol Gosh "Toxicity classification on Music Lyrics using machine learning algorithms” 24th international Conference on computer and information Technology, 2021. </li>
+		<li style="color:#212529;">  Anirudh Reddy Cingreddy,<strong> Robin Ghosh*,</strong> Venkata Melapu, Sravanthi Joginipelli, Tor A kwembe "Classification of Parkinson's disease using motor and non-motor biomarkers through machine learning techniques "  IJQSPR 6.4 (2021): 2021.  </li>
+		<li style="color:#212529;">  Juganta K Roy,<strong> Robin Ghosh*,</strong> Ruma Das, Jerzy Leszczynski "Machine learning for the high-performance donor/acceptor pairs for non-fullerene based organic solar cells “ Conference of American Chemical Society Spring: 2021. {Oral Presentation}.  </li>
+		<li style="color:#212529;"> Sathvik Palyam *,<strong> Robin Ghosh*,</strong> " A web user interface image processing tool for classifying the extent of dementia across Alzheimer’s “ Posters at the capital 2022 will be held on March 09, Little Rock Arkansas, USA. {Poster Presentation}.</li> 
+		<li style="color:#212529;">MAS Siddique. MI Sarker.<strong> Robin Ghosh*,</strong> Komol Gosh "Toxicity classification on Music Lyrics using machine learning algorithms” 24th International Conference on computer and Information Technology, 2021. </li>
 		</ol>
 		<h6 style="color:black; margin-top:15px;font-weight:bold;">Grants: </h6>
 		<ul>
 		<li>Project Manager: U.S. Department of Education Project(# P120A150078): $530k</li>
 		<li> Awarded ATU Innovation Grant 2022-2023 as a Project PI $110,000 for two years.</li>
-		<li> Undergraduate Research Scholaship Awards 2022-2023 : $2000 .</li>
+		<li> Undergraduate Research Scholarship Awards 2022-2023: $2000 .</li>
 		</ul>
 	</div>
 	
