--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ Phone no : 479-964-3252
 	<div class="main">
 	<div>
 		<h3 style="color:#0b3a35; margin-top:10px;"> Research</h3>
-		<p > I am a tenure track faculty within the Department of Engineering and Computing Sciences at Arkansas Tech University. My research focuses on the application of Artificial Intelligence techniques in Health, Agriculture, Education, and various domains to explore innovative AI solutions. With over 9+ years of academic research experience, I have experienced in developing and implementing large-scale algorithms that have shaped research outcomes in Bioinformatics and other areas.  </p>
-		<b>Focus Areas:</b><p>Data Analysis, Visualization, and Predictive Modeling<br>Machine Learning Techniques(Decision Trees, Logistic Regression, Random Forest, KNN, Naïve Bayes, XGB boost, SVM)<br>Deep Learning Techniques (ANN, Markov Chain, CNN, RNN, LSTM)<br>Natural Language Processing (NLP)<br>Time Series Analysis (ARIMA & PROPHET)<br>Web Development, Web Scraping<br>Research, Reports, and Forecasts.</p>
+		<p > I am a tenure track faculty within the Department of Engineering and Computing Sciences at Arkansas Tech University. My research focuses on the application of Artificial Intelligence(AI) techniques in Health, Agriculture, Education, and various domains to explore innovative AI solutions. With over 9+ years of academic research experience, I have experienced in developing and implementing large-scale algorithms that have shaped research outcomes in Bioinformatics and other areas.  </p>
+		<b>Focus Areas:</b><p> Artificial Intelligence, Machine Learning, Data Analysis, Visualization, and Predictive Modeling<br>Machine Learning Techniques(Decision Trees, Logistic Regression, Random Forest, KNN, Naïve Bayes, XGB boost, SVM)<br>Deep Learning Techniques (ANN, Markov Chain, CNN, RNN, LSTM)<br>Natural Language Processing (NLP)<br>Time Series Analysis (ARIMA & PROPHET)<br>Web Development, Web Scraping<br>Research, Reports, and Forecasts.</p>
 		<!--<img src="cover3.jpeg" width="100%">-->
 		<h6 style="color:black; margin-top:15px;font-weight:bold;">Publications & Abstract & Poster </h6>
 		<ol  style="line-height:30px;">
