updated students and alumni

--- a/accomplishments/index.html
+++ b/accomplishments/index.html
@@ -79,8 +79,11 @@ margin-left:-5px;
 	  <li class="nav-item">
         <a class="nav-link" href="/accomplishments">Accomplishments</a>
       </li>
-	        <li class="nav-item">
-        <a class="nav-link" href="/students">Student</a>
+	  <li class="nav-item">
+        <a class="nav-link" href="/students">Students</a>
+      </li>
+	    <li class="nav-item">
+        <a class="nav-link" href="/alumni">Alumni</a>
       </li>
 	  <li class="nav-item">
         <a class="nav-link" href="/services">Services</a>
