--- a/services/index.html
+++ b/services/index.html
@@ -34,7 +34,7 @@ margin-top:10px;
 .links li a{color:#494e52;
 font-size:13.5px;
 margin-left:-5px;
--apple-system,".SFNSText-Regular","San Francisco","Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;}
+font-family:-apple-system,".SFNSText-Regular","San Francisco","Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;}
 .p1{font-family: -apple-system,".SFNSText-Regular","San Francisco","Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;
     font-size: 13px;
     line-height: 1.5;}
@@ -79,8 +79,11 @@ margin-left:-5px;
 	  <li class="nav-item">
         <a class="nav-link" href="/accomplishments">Accomplishments</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/students">Students</a>
+      </li>
 	        <li class="nav-item">
-        <a class="nav-link" href="/students">Student</a>
+        <a class="nav-link" href="/alumni">Alumni</a>
       </li>
 	  <li class="nav-item">
         <a class="nav-link" href="/services">Services</a>
