--- a/academics/index.html
+++ b/academics/index.html
@@ -78,9 +78,12 @@ margin-left:-5px;
       </li>
 	  <li class="nav-item">
         <a class="nav-link" href="/accomplishments">Accomplishments</a>
+		<li class="nav-item">
+			<a class="nav-link" href="/students">Students</a>
+		</li>
       </li>
 	        <li class="nav-item">
-        <a class="nav-link" href="/students">Student</a>
+        <a class="nav-link" href="/alumni">Alumni</a>
       </li>
 	  <li class="nav-item">
         <a class="nav-link" href="/services">Services</a>
