--- a/alumni/index.html
+++ b/alumni/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Students </title>
+    <title> Alumni </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -49,15 +49,7 @@
       color: #494e52;
       font-size: 13.5px;
       margin-left: -5px;
-      font-family:-apple-system,
-      ".SFNSText-Regular",
-      "San Francisco",
-      "Roboto",
-      "Segoe UI",
-      "Helvetica Neue",
-      "Lucida Grande",
-      Arial,
-      sans-serif;
+      font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
     }
 
     .p1 {
@@ -194,42 +186,51 @@
           <div class="main">
             <div>
               <!--	<h3 style="color:#0b3a35; margin-top:10px;"> Lab Members</h3><img src = "" width="100%" height="200px;"> -->
-              <h3 style="color:#0b3a35; margin-top:40px;">Students</h3>
+              <h3 style="color:#0b3a35; margin-top:40px;"> Graduate students</h3>
               <hr>
-              <div class="row" style="margin-top:30px;">
+              <div class="row" style="margin-top:50px;">
                 <div class="col-md-3">
-                  <img src="../1617597757987.jpg" width="100%">
+                  <img src="../d195be9c-2bcf-4c22-9822-1606ed74c58c.jpg" width="100%">
                   <div class="text">
-                    <h4>Zurab Sabakhtarishvili</h4>
-                    <p style="font-size:18px;">Undergraduate Student</p>
-                    <p style="font-size:18px;">Profile : <a href="https://www.linkedin.com/in/zurab-sabakhtarishvili-33b2731b4/" target="blank">LinkedIN</a>
+                    <h4>Katta Sriram</h4>
+                    <p style="font-size:18px;">Graduate student</p>
+                    <p style="font-size:18px;">Profile : <a href="https://www.linkedin.com/mwlite/in/katta-sriram-479610103" target="blank">LinkedIN</a>
                     </p>
                   </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="../1681071493840.jpg" width="100%">
+                  <img src="../6d37e810-cfe9-4765-8ece-9d095ec0c534.jpg" width="100%">
                   <div class="text">
-                    <h4>Sijan Panday</h4>
-                    <p style="font-size:18px;">Undergraduate student</p>
-                    <p style="font-size:18px;">Profile : <a href="https://www.linkedin.com/in/sijan-panday-538b7a209/" target="blank">LinkedIN</a>
+                    <h4>Navadheep Chowdhary</h4>
+                    <p style="font-size:18px;">Graduate student</p>
+                    <p style="font-size:18px;">Profile : <a href="https://www.linkedin.com/mwlite/in/navadheep-chowdhary-a18890231" target="blank">LinkedIN</a>
                     </p>
                   </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="../1684184528249.jpg" width="100%">
+                  <img src="../1589963950107.jpg" width="100%">
                   <div class="text">
-                    <h4>Clayton Jensen</h4>
-                    <p style="font-size:18px;">Undergraduate student</p>
-                    <p style="font-size:18px;">Profile : <a href="https://www.linkedin.com/in/clayton-jensen-875556219/" target="blank">LinkedIN</a>
+                    <h4>Sathvik Prasad</h4>
+                    <p style="font-size:18px;">Graduate student</p>
+                    <p style="font-size:18px;">Profile : <a href="https://www.linkedin.com/in/sathvik-prasad/" target="blank">LinkedIN</a>
                     </p>
                   </div>
                 </div>
                 <div class="col-md-3">
-                  <img src="../1683567151260.jpg" width="100%">
+                  <img src="../1642524711061.jpg" width="100%">
                   <div class="text">
-                    <h4>Hiromi Honda</h4>
-                    <p style="font-size:18px;">Undergraduate student</p>
-                    <p style="font-size:18px;">Profile : <a href="https://www.linkedin.com/in/hiromi-honda-35389a23a/" target="blank">LinkedIN</a>
+                    <h4>Sucharitha Reddy</h4>
+                    <p style="font-size:18px;">Graduate student</p>
+                    <p style="font-size:18px;">Profile : <a href="https://www.linkedin.com/in/sucharitha-reddy-605096127/" target="blank">LinkedIN</a>
+                    </p>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <img src="../1640672965536.jpg" width="100%">
+                  <div class="text">
+                    <h4>Musfikur Rahaman</h4>
+                    <p style="font-size:18px;">Graduate student</p>
+                    <p style="font-size:18px;">Profile : <a href="https://www.linkedin.com/in/musfikur-rahaman-76750b91/" target="blank">LinkedIN</a>
                     </p>
                   </div>
                 </div>
