--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ margin-left:-5px;
         <a class="nav-link" href="/accomplishments">Accomplishments</a>
       </li>
 	      <li class="nav-item">
-        <a class="nav-link" href="/students">Students</a>
+        <a class="nav-link" href="/alumni">Alumni</a>
       </li>
 	  <li class="nav-item">
         <a class="nav-link" href="/services">Services</a>
