updated students and alumni

--- a/alumni/index.html
+++ b/alumni/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Students </title>
+    <title> Alumni </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -49,15 +49,7 @@
       color: #494e52;
       font-size: 13.5px;
       margin-left: -5px;
-      font-family:-apple-system,
-      ".SFNSText-Regular",
-      "San Francisco",
-      "Roboto",
-      "Segoe UI",
-      "Helvetica Neue",
-      "Lucida Grande",
-      Arial,
-      sans-serif;
+      font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
     }
 
     .p1 {
@@ -193,7 +185,6 @@
         <div class="col-md-9">
           <div class="main">
             <div>
-              <!--	<h3 style="color:#0b3a35; margin-top:10px;"> Lab Members</h3><img src = "" width="100%" height="200px;"> -->
               <h3 style="color:#0b3a35; margin-top:40px;">Undergraduate Students</h3>
               <hr>
               <div class="row" style="margin-top:30px;">
@@ -234,7 +225,8 @@
                   </div>
                 </div>
               </div>
-              <h3 style="color:#0b3a35; margin-top:40px;">Graduate Students</h3>
+              <!--	<h3 style="color:#0b3a35; margin-top:10px;"> Lab Members</h3><img src = "" width="100%" height="200px;"> -->
+              <h3 style="color:#0b3a35; margin-top:40px;"> Graduate students</h3>
               <hr>
               <div class="row" style="margin-top:50px;">
                 <div class="col-md-3">
