--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@ margin-left:-5px;
 	  <li class="nav-item">
         <a class="nav-link" href="/accomplishments">Accomplishments</a>
       </li>
-	      <li class="nav-item">
+      <li class="nav-item">
+        <a class="nav-link" href="/students">Students</a>
+      </li>
+	    <li class="nav-item">
         <a class="nav-link" href="/alumni">Alumni</a>
       </li>
 	  <li class="nav-item">
